add makefile for simplify migrations commands

--- a/AdminStore.API/appsettings.json
+++ b/AdminStore.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=admin_store;Username=solfacil;Password=solfacil"
+    "DefaultConnection": "Host=localhost;Database=admin_store;Username=user;Password=password"
   },
   "Logging": {
     "LogLevel": {
