Add GetAllProducts unittest

--- a/AdminStore.API/appsettings.json
+++ b/AdminStore.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=admin_store;Username=user;Password=password"
+    "DefaultConnection": "Host=localhost;Database=admin_store;Username=solfacil;Password=solfacil",
+    "TestConnection": "Host=localhost;Database=admin_store_test;Username=solfacil;Password=solfacil"
   },
   "Logging": {
     "LogLevel": {
